--- a/relazione/sezioni/gamification.tex
+++ b/relazione/sezioni/gamification.tex
@@ -32,7 +32,7 @@ In particolare PSD mette in evidenza:
     \item un individuo che valuta attentamente il contenuto del messaggio persuasivo può essere approcciato con un percorso diretto, mentre un individuo meno riflessivo e che usa semplici indizi o stereotipi può essere persuaso attraverso un percorso indiretto;
     \item la persuasione è spesso incrementale: risulta più semplice iniziare le persone a fare una serie di azioni attraverso suggerimenti incrementali, piuttosto che con un unico suggerimento fornito una tantum;
     \item contenuti basati su informazioni non fidate o false impediscono l'obiettivo finale di cambiare le attitudini o i comportamenti;
-    \item i sistemi persuasivi devono mirare a non essere intrusivi e a essere semplici da usare.
+    \item i sistemi persuasivi devono mirare a non essere intrusivi e ad essere semplici da usare.
 \end{itemize}
 
 Il modello PSD pone molta enfasi sul fatto che la selezione dei principi di progettazione rilevanti richiede un'attenta analisi del contesto per poter scegliere i momenti più opportuni in cui inviare i messaggi persuasivi.
