aggiunti commenti per mercoledì

--- a/relazione/sezioni/frontespizio.tex
+++ b/relazione/sezioni/frontespizio.tex
@@ -23,7 +23,8 @@
     \Titolo{Realizzazione dell'app mobile Trains}
     \Sottotitolo{Progetto di Mobile Programming}
     \NCandidato{}
-    \Candidato{Matteo Marchiori\\Giovanni Peron}
+    
+    \Candidato{ Matteo Marchiori\\\normalsize Matricola 1236329\\\\ Giovanni Peron\\\normalsize Matricola 1237783}
     %\Relatore{Prof.~Ombretta Gaggi}
     \Punteggiatura{}
     %\Rientro{3cm}
