--- a/relazione/sezioni/gamification.tex
+++ b/relazione/sezioni/gamification.tex
@@ -111,7 +111,7 @@ Il termine gamification è stato definito in molti modi diversi. Viene data la s
 \end{quoting}
 
 Un sistema con gamification non è immersive: il gioco viene svolto solo una volta ogni tanto, come gioco casuale, richiedendo quindi solo attenzione parziale da parte dell'utente.
-
+%TODO se vogliamo tagliare secondo me basta solo una lista di tipologie di utenti
 I tipi di giocatore che sono stati identificati sono i seguenti:
 
 \begin{description}
@@ -129,6 +129,7 @@ Nonostante meccanismi basati sui gruppi siano promettenti, studi riportano risul
 \begin{description}
     \item[achievers]: si focalizzano sul miglioramento personale; a loro non piace essere sottoposti a confronti . Sono motivati dal progresso individuale e dal migliorare le proprie performance. La loro influenza su altri membri del gruppo è limitata;
     \item[active buddies]: gioiscono della compagnia di un piccolo gruppo di amici stretti che creano. Sono motivati dal ``social play'', si ricordano tra loro di essere attivi;
+    %TODO controllare i che
     \item[social experience seekers]: usano i mezzi di comunicazione del gioco e applicano il role-playing che questi generano come contesto dove interagire con i compagni di gioco;
     \item[team players]: i giocatori sono più motivati dai risultati di gruppo e dal ranking e incoraggiano gli altri a migliorare la performance del team; sono motivati dal senso di appartenenza e sono entusiasti di contribuire per una causa più grande;
     \item[freeloaders]: non contribuiscono al risultato di gruppo ma vi restano comunque all'interno, spesso a scapito della performance del gruppo stesso. Questi giocatori spesso perdono l'interesse velocemente, non chiedono di uscire o di essere rimpiazzati ma vi restano all'interno per vedere quale beneficio personale possono ottenere. 
@@ -195,7 +196,7 @@ Per quanto riguarda Trains, abbiamo deciso di applicare le seguenti meccaniche d
     \item classifica globale per livello raggiunto (in futuro si potrebbero implementare più classifiche in base ai livelli e ai punti esperienza guadagnati dagli utenti);
     \item on-boarding con tutorial: l'utente viene introdotto al gioco senza troppe spiegazioni, e in modo che riceva immediatamente una gratificazione dopo aver votato un treno. Le istruzioni vengono visualizzate per i primi tre accessi, dopodiché scompaiono e diventano raggiungibili dal menù laterale.
 \end{itemize}
-
+%TODO FBM per cosa sta?
 \section{Dinamiche di gioco e FBM\label{sec:dinamiche-fbm}}
 
 Le dinamiche di gioco create dall'attenta combinazione delle meccaniche sono un elemento molto importante perché permettono di modificare gli elementi chiave del FBM fino ad innescare il comportamento target.
