caricati un po' di screenshot

--- a/relazione/sezioni/design.tex
+++ b/relazione/sezioni/design.tex
@@ -5,7 +5,7 @@ In questo capitolo descriviamo gli aspetti di design visti a lezione che abbiamo
 \section{Interfaccia\label{sec:interfaccia}}
 L'interfaccia dell'applicazione è stata implementata, tenendo in considerazione gli argomenti trattati nel corso, quindi abbiamo cercato di rispettare il più possibile:
 \begin{itemize}
-    \item le differenti dimensioni dei dispositivi mobile;%smartphone (perchè non è per tablet)
+    \item le differenti dimensioni degli smartphones;%c'era dispositivi mobili (però non è per tablet)
     \item la comfort zone (regola del pollice);
     \item la regola del content always on top;
     \item il fatto di evitare stack di pulsanti;
@@ -24,12 +24,12 @@ Siamo comunque riusciti a ottenere un'interfaccia con pochi pulsanti e di dimens
 
 \subsection{Home}
 
-\begin{figure}[htp]
+\begin{figure}[H]
     \centering
     \subfloat[Schermata Android Home][Schermata Android Home]
-    {\includegraphics[width=.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=.45\textwidth]{immagini/android/home.jpg}} \quad
     \subfloat[Schermata iOS Home][Schermata iOS Home]
-    {\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=0.45\textwidth]{immagini/ios/home.png}} \quad
     \caption{Schermata Home}
     \label{fig:home}
 \end{figure}
@@ -46,9 +46,9 @@ In questa schermata è possibile visualizzare un menù laterale, tramite una ges
 \begin{figure}[htp]
     \centering
     \subfloat[Schermata Android Stato del treno][Schermata Android Stato del treno]
-    {\includegraphics[width=.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=.45\textwidth]{immagini/android/stato.jpg}} \quad
     \subfloat[Schermata iOS Stato del treno][Schermata iOS Stato del treno]
-    {\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=0.45\textwidth]{immagini/ios/stato.png}} \quad
     \caption{Schermata Stato del treno}
     \label{fig:statoTreno}
 \end{figure}
@@ -57,12 +57,12 @@ In questa schermata l'utente può visualizzare i dettagli del treno selezionato,
 
 \subsection{Valuta il treno}
 
-\begin{figure}[htp]
+\begin{figure}[H]
     \centering
     \subfloat[Schermata Android Valuta il treno][Schermata Android Valuta il treno]
-    {\includegraphics[width=.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=.45\textwidth]{immagini/android/valutazione.jpg}} \quad
     \subfloat[Schermata iOS Valuta il treno][Schermata iOS Valuta il treno]
-    {\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=0.45\textwidth]{immagini/ios/valutazione.png}} \quad
     \caption{Schermata Valuta il treno}
     \label{fig:valutaTreno}
 \end{figure}
@@ -72,12 +72,12 @@ Per le prime tre valutazioni all'utente verrà proposto un tutorial veloce per s
 
 \subsection{Hai valutato}
 
-\begin{figure}[htp]
+\begin{figure}[H]
     \centering
     \subfloat[Schermata Android Hai valutato][Schermata Android Hai valutato]
-    {\includegraphics[width=.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=.45\textwidth]{immagini/android/haivalutato.jpg}} \quad
     \subfloat[Schermata iOS Hai valutato][Schermata iOS Hai valutato]
-    {\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=0.45\textwidth]{immagini/ios/haivalutato.png}} \quad
     \caption{Schermata Hai valutato}
     \label{fig:haiValutato}
 \end{figure}
@@ -89,9 +89,9 @@ Per le prime tre valutazioni all'utente verrà proposto un tutorial veloce per s
 \begin{figure}[htp]
     \centering
     \subfloat[Schermata Android Il tuo Profilo][Schermata Android Il tuo Profilo]
-    {\includegraphics[width=.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=.45\textwidth]{immagini/android/profilo.jpg}} \quad
     \subfloat[Schermata iOS Il tuo Profilo][Schermata iOS Il tuo Profilo]
-    {\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
+    {\includegraphics[width=0.45\textwidth]{immagini/ios/profilo.png}} \quad
     \caption{Schermata Il tuo Profilo}
     \label{fig:ilTuoProfilo}
 \end{figure}
@@ -103,9 +103,9 @@ Nella schermata relativa al profilo, l'utente può visualizzare i suoi dati e i 
 \begin{figure}[htp]
 	\centering
 	\subfloat[Schermata Android Il tuo Profilo][Schermata Android Il tuo Profilo]
-	{\includegraphics[width=.45\textwidth]{immagini/profile.jpg}} \quad
-	\subfloat[Schermata iOS Il tuo Profilo][Schermata iOS Il tuo Profilo]
-	{\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
+	{\includegraphics[width=.45\textwidth]{immagini/android/informazioni.jpg}} \quad
+	%\subfloat[Schermata iOS Il tuo Profilo][Schermata iOS Il tuo Profilo]
+	%{\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
 	\caption{Schermata Il tuo Profilo}
 	\label{fig:ilTuoProfilo}
 \end{figure}
