--- a/relazione/sezioni/frontespizio.tex
+++ b/relazione/sezioni/frontespizio.tex
@@ -23,11 +23,10 @@
     \Titolo{Realizzazione dell'app mobile Trains}
     \Sottotitolo{Progetto di Mobile Programming}
     \NCandidato{}
-    
-    \Candidato{ Matteo Marchiori\\\normalsize Matricola 1236329\\\\ Giovanni Peron\\\normalsize Matricola 1237783}
-    %\Relatore{Prof.~Ombretta Gaggi}
-    \Punteggiatura{}
-    %\Rientro{3cm}
+    \NRelatore{}{}
+    \Candidato{Matteo Marchiori\\\normalsize Matricola 1236329}
+    \Relatore{Giovanni Peron\\\normalsize Matricola 1237783}
+    \Rientro{3cm}
     %\Margini{4cm}{5cm}{4cm}{3cm}
     \Preambolo{\usepackage{iwona}}
 \end{frontespizio}
