--- a/relazione/sezioni/implementazione.tex
+++ b/relazione/sezioni/implementazione.tex
@@ -68,8 +68,8 @@ In questo caso però l'utente era costretto a eseguire il login con il proprio a
 La soluzione in questo caso è stata quella di implementare un database locale con una struttura che emula quella del database su Firestore, ma in una versione relazionale, memorizzata attraverso l'uso di SQLite.
 
 \subsection{Comparazione con altri framework\label{sec:flutter-comparazione}}
-%TODO intravisto?
-Prima di usare Flutter avevamo valutato di usare un framework cross platform intravisto a lezione chiamato Appcelerator Titanium.
+
+Prima di usare Flutter avevamo valutato di usare un framework cross platform visto a lezione chiamato Appcelerator Titanium.
 Pur essendo un framework adatto allo sviluppo di un'app come Trains, ci sono stati diversi punti a sfavore che ci hanno portato a scegliere Flutter.
 Appcelerator Titanium è un framework di tipo interpretato, permette di ottenere app cross platform partendo da codice JavaScript \parencite{gaggi:framework}.
 È presente un interprete che consente di ottenere l'app con LAF nativo su Android e iOS.
