--- a/relazione/template.tex
+++ b/relazione/template.tex
@@ -20,7 +20,7 @@
 \usepackage{subfig}
 \usepackage[eulerchapternumbers,beramono,pdfspacing]{classicthesis}
 \usepackage{arsclassica}
-\usepackage[noadvisor]{frontespizio}
+\usepackage{frontespizio}
 \usepackage{float}
 \usepackage{tabularx}
 \usepackage{indentfirst}
