aggiunto ultimo screen

--- a/relazione/sezioni/design.tex
+++ b/relazione/sezioni/design.tex
@@ -104,8 +104,8 @@ Nella schermata relativa al profilo, l'utente può visualizzare i suoi dati e i 
 	\centering
 	\subfloat[Schermata Android Il tuo Profilo][Schermata Android Il tuo Profilo]
 	{\includegraphics[width=.45\textwidth]{immagini/android/informazioni.jpg}} \quad
-	%\subfloat[Schermata iOS Il tuo Profilo][Schermata iOS Il tuo Profilo]
-	%{\includegraphics[width=0.45\textwidth]{immagini/profile.jpg}} \quad
+	\subfloat[Schermata iOS Il tuo Profilo][Schermata iOS Il tuo Profilo]
+	{\includegraphics[width=0.45\textwidth]{immagini/ios/informazioni.png}} \quad
 	\caption{Schermata Il tuo Profilo}
 	\label{fig:ilTuoProfilo}
 \end{figure}
