--- a/relazione/sezioni/frontespizio.tex
+++ b/relazione/sezioni/frontespizio.tex
@@ -22,8 +22,8 @@
     \Annoaccademico{2019--2020}
     \Titolo{Realizzazione dell'app mobile Trains}
     \Sottotitolo{Progetto di Mobile Programming}
-    \NCandidato{}
-    \NRelatore{}{}
+    \NCandidato{Studente}
+    \NRelatore{Studente}{}
     \Candidato{Matteo Marchiori\\\normalsize Matricola 1236329}
     \Relatore{Giovanni Peron\\\normalsize Matricola 1237783}
     \Rientro{3cm}
